first prototype: camera moves on the plane. Incorporates shaders and texture, and the PNG decoder lib has been added in support thereof. 	modified:   .classpath 	new file:   assets/images/stGrid1.png 	new file:   assets/images/stGrid2.png 	new file:   assets/shaders/moving/fragment.glsl 	new file:   assets/shaders/moving/vertex.glsl 	new file:   src/GameClient.java 	deleted:    src/GameClient1.java 	new file:   src/VertexData.java 	new file:   ../external/twl/PNGDecoder.jar

--- a/projects/GameClient1/.classpath
+++ b/projects/GameClient1/.classpath
@@ -12,5 +12,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/steve/Documents/GitHub/Ayvex/projects/external/lwjgl-2.9.1/jar/lwjgl_util.jar"/>
+	<classpathentry kind="lib" path="C:/Users/steve/Documents/GitHub/Ayvex/projects/external/twl/PNGDecoder.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
